# statistical-data-analysis

./: .gitignore  Makefile  main.py  pyproject.toml
nbs/: 00-first-excercise-set.ipynb
