[project]
name = "statistical-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
